Bug 166975 - FILEOPEN DOCX Numbering format corruped by % symbols
Summary: FILEOPEN DOCX Numbering format corruped by % symbols
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.7.2 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:26.2.0 target:25.8.0.2, inRele...
Keywords: bibisected, bisected
Depends on:
Blocks:
 
Reported: 2025-06-12 19:03 UTC by Timur
Modified: 2025-07-12 09:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample DOCX (19.55 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-06-12 19:03 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-06-12 19:03:00 UTC
Created attachment 201237 [details]
Sample DOCX

Open the attached file. The enumeration is corruped by % symbols.
Never was correct. Last change was with:
commit 10e99b6ad18a8575351e1a9a6b129b6a6e1f0586	[log]
author	Vasily Melenchuk <vasily.melenchuk@cib.de>	Mon Apr 13 11:06:29 2020 +0300
committer	Thorsten Behrens <Thorsten.Behrens@CIB.de>	Tue May 05 22:22:37 2020 +0200
tdf#116883: sw: support for lists level format string
Comment 1 m_a_riosv 2025-06-12 23:28:50 UTC
Reproducible
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 389325166a3357d7a4e557dc4c223fe0bb7aeadd
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Resaving with MS doesn't solve the issue.
Comment 2 m_a_riosv 2025-06-12 23:33:32 UTC
First version that fails on the ones I have installed.
Version: 6.4.7.2 (x64)
Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
CPU threads: 16; OS: Windows 10.0 Build 26100; UI render: GL; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US
Calc: CL
Comment 3 Timur 2025-06-13 07:06:12 UTC
I remove "regression" as this was not correct before the change, it is just wrong in different way.
Comment 4 Commit Notification 2025-07-10 12:51:38 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1db81743594f7b858ff4d17c80a7366adee2b3fe

tdf#166975 sw: fix expansion of list level format with repeated levels

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-07-11 08:03:31 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/55fbce80511a91d21fd8366f86786a0fb46b9357

tdf#166975 sw: fix DOCX export of list level format with repeated levels

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2025-07-11 08:05:57 UTC
fixed export too now
Comment 7 Commit Notification 2025-07-11 08:31:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/71fcaee57b7c0d2a169c8764666572f38bc435f1

tdf#166975 sw: fix expansion of list level format with repeated levels

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Timur 2025-07-11 09:06:23 UTC
I think this may go into Releae Notes, before and after is nice screenshot.
Comment 9 Buovjaga 2025-07-11 10:45:41 UTC
(In reply to Timur from comment #8)
> I think this may go into Releae Notes, before and after is nice screenshot.

Sure, go ahead and add it.
Comment 10 Timur 2025-07-11 11:01:32 UTC
Added, probably needs some adjustment.
Comment 11 Commit Notification 2025-07-12 09:17:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/87c0461b99d441ce5436180c6f5b0f3111bfedc7

tdf#166975 sw: fix DOCX export of list level format with repeated levels

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.