tdf#166975 sw: fix expansion of list level format with repeated levels

SwNumRule::MakeNumString() would only replace each level's placeholder
once in the format string; rework this so it iterates the whole format
string.

Change-Id: I1d0c5bf5c60c3003cc0257acfb69b37d209be617
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186977
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit e200c729797e7f3c19e958f9796a1d0fbae829d1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187020
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit 1db81743594f7b858ff4d17c80a7366adee2b3fe)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187646
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>