sw/qa/extras/ooxmlexport/ooxmlexport22.cxx
@@ -70,6 +70,24 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf165933_noDelTextOnMove)
     assertXPath(pXmlDoc, "//w:moveFrom/w:r/w:delText"_ostr, 0);
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf166975)
+{
+    loadAndSave("WordOK.docx");
+
+    CPPUNIT_ASSERT_EQUAL(u"a)"_ustr,
+                         getProperty<OUString>(getParagraph(2), u"ListLabelString"_ustr));
+    // this was a%6%)
+    CPPUNIT_ASSERT_EQUAL(u"aa)"_ustr,
+                         getProperty<OUString>(getParagraph(3), u"ListLabelString"_ustr));
+    // this was a%7%%7%)
+    CPPUNIT_ASSERT_EQUAL(u"aaa)"_ustr,
+                         getProperty<OUString>(getParagraph(4), u"ListLabelString"_ustr));
+    CPPUNIT_ASSERT_EQUAL(u"bbb)"_ustr,
+                         getProperty<OUString>(getParagraph(5), u"ListLabelString"_ustr));
+    CPPUNIT_ASSERT_EQUAL(u"ccc)"_ustr,
+                         getProperty<OUString>(getParagraph(6), u"ListLabelString"_ustr));
+}
+
 CPPUNIT_TEST_FIXTURE(Test, testAnnotationRef)
 {
     loadAndSave("comment-annotationref.docx");
